--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/shortid": "0.0.29",
     "classnames": "^2.2.6",
+    "lorem-ipsum": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
